added bootstrap, jquery, cssbundling, jsbundling and root, about

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,6 +10,8 @@
     <%= javascript_importmap_tags %>
   </head>
 
+  <%= render partial: "shared/navbar" %>
+
   <body>
     <%= yield %>
   </body>
