added new, create content and error flash

--- a/app/views/shared/_flash.html.erb
+++ b/app/views/shared/_flash.html.erb
@@ -1,4 +1,4 @@
-<-! Create a notification ->
+<!--Create a notification-->
 <% if flash[:notice] %>
   <div class="container">
     <div class="alert alert-info mt-4 text-center alert-dismissible fade show" role="alert">
@@ -8,7 +8,7 @@
   </div>
 <% end %>
 
-<-! Create an Alert Message ->
+<!-- Create an Alert Message-->
 <%if flash[:alert] %>
  <div class="container">
    <div class="alert alert-info mt-4 text-center alert-dismissible fade show" role="alert">
