--- a/app/views/contents/index.html.erb
+++ b/app/views/contents/index.html.erb
@@ -7,12 +7,13 @@
     <section>
       <div class="row gx-lg-5">
       <% @contents.each do |content| %>
-          <div class="col-lg-4 col-md-12 mb-4 mb-lg-0">
+          <div class="col-lg-4 col-md-12 mb-4 mb-lg-0 mt-4">
             <div>
               <a href="#" class="text-dark text-decoration-none"><h3><%= content.title %></h3></a>
               <p class ="mb-4"> <%= content.body %> </p>
               <div class="mt-4 ">
                 <%= link_to "Show", content_path(content), class: "btn btn-primary mx-2" %>
+                <%= link_to "New news", new_content_path, class: "btn btn-success mx-2" %>
                 <button type="button" class="btn btn-danger mx-2">Delete</button>
                 <button type="button" class="btn btn-warning mx-2">Edit</button>
               </div>
