--- a/app/views/contents/show.html.erb
+++ b/app/views/contents/show.html.erb
@@ -1,5 +1,5 @@
 <div class="container">
   <h1> News Details </h1>
-  <p><strong> Title: </strong> <%= @contents.title %> </p>
-  <p><strong> Description: </strong> <%= @contents.body %> </p>
+  <p><strong> Title: </strong> <%= @content.title %> </p>
+  <p><strong> Description: </strong> <%= @content.body %> </p>
 </div>
