--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -1,20 +1,28 @@
-<nav class="navbar navbar-expand-lg bg-body-tertiary">
+<nav class="navbar bg-dark border-bottom border-bottom-primary navbar-expand-lg bg-body-tertiary" data-bs-theme="dark">
   <div class="container-fluid">
     <%= link_to "Navbar", root_path, class:"navbar-brand" %>
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
     <div class="collapse navbar-collapse" id="navbarNav">
-      <ul class="navbar-nav">
+      <ul class="navbar-nav  d-flex">
         <li class="nav-item">
           <%= link_to "Home", root_path, class:"nav-link active", aria_current: "pages" %>
         </li>
         <li class="nav-item">
           <%= link_to "About Us", about_path, class: "nav-link" %>
         </li>
-        <li class="nav-item">
-          <%= link_to "News", contents_path, class: "nav-link" %>
+
+        <li class="nav-item dropdown">
+          <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+            News
+          </a>
+          <ul class="dropdown-menu">
+            <li><%= link_to "News List", contents_path, class: "dropdown-item" %></li>
+            <li><%= link_to "Create New", new_content_path, class: "dropdown-item" %></li>
+          </ul>
         </li>
+
         <li class="nav-item">
           <a class="nav-link" href="#">Contact Us</a>
         </li>
