--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -1,47 +1,90 @@
-<nav class="navbar bg-dark border-bottom border-bottom-primary navbar-expand-lg bg-body-tertiary" data-bs-theme="dark">
-  <div class="container-fluid">
-    <%= link_to "Navbar", root_path, class:"navbar-brand" %>
-    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-      <span class="navbar-toggler-icon"></span>
-    </button>
-    <div class="collapse navbar-collapse" id="navbarNav">
-      <ul class="navbar-nav  d-flex">
-        <li class="nav-item">
-          <%= link_to "Home", root_path, class:"nav-link active", aria_current: "pages" %>
-        </li>
-        <li class="nav-item">
-          <%= link_to "About Us", about_path, class: "nav-link" %>
-        </li>
+<%= stylesheet_link_tag "customNav", "data-turbo-track": "reload" %>
 
-        <li class="nav-item dropdown">
-          <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-            News
-          </a>
-          <ul class="dropdown-menu">
-            <li><%= link_to "News List", contents_path, class: "dropdown-item" %></li>
-            <li><%= link_to "Create New", new_content_path, class: "dropdown-item" %></li>
-          </ul>
-        </li>
+  <div class="d-flex flex-column align-items-center align-items-sm-start px-3 pt-2 text-white min-vh-100">
 
-        <li class="nav-item">
-          <a class="nav-link" href="#">Contact Us</a>
+    <%=link_to root_path, class:"d-flex align-items-center pb-3 mb-md-0 me-md-auto text-white text-decoration-none mt-2" do %>
+      <span class="fs-5 d-none d-sm-inline">Menu</span>
+    <% end %>
+
+    <ul class="nav nav-pills flex-column mb-sm-auto mb-0 align-items-center align-items-sm-start" id="menu">
+      <li class="nav-item">
+        <%= link_to root_path, class: "nav-link align-middle px-0", aria_current: "pages" do %>
+          <i class="fs-4 bi-house"></i> <span class="ms-1 d-none d-sm-inline">Home</span>
+        <% end %>
+      </li>
+
+      <li>
+        <a href="#submenu1" data-bs-toggle="collapse" class="nav-link px-0 align-middle">
+          <i class="fs-4 bi-table"></i> <span class="ms-1 d-none d-sm-inline">Post</span> </a>
+        <ul class="collapse nav flex-column ms-1" id="submenu1" data-bs-parent="#menu">
+          <li class="w-100">
+            <%=link_to contents_path, class:"nav-link px-0" do %>
+              <span class="d-none d-sm-inline"> Post Index </span>
+            <% end %>
+          </li>
+          <li class="w-100">
+            <%=link_to new_content_path, class:"nav-link px-0" do %>
+              <span class="d-none d-sm-inline"> Create New Post</span>
+            <% end %>
+          </li>
+        </ul>
+      </li>
+      <li>
+        <a href="#" class="nav-link px-0 align-middle">
+          <i class="fs-4 bi-table"></i> <span class="ms-1 d-none d-sm-inline">Orders</span></a>
+      </li>
+
+      <li>
+        <a href="#submenu2" data-bs-toggle="collapse" class="nav-link px-0 align-middle ">
+          <i class="fs-4 bi-bootstrap"></i> <span class="ms-1 d-none d-sm-inline">Bootstrap</span></a>
+        <ul class="collapse nav flex-column ms-1" id="submenu2" data-bs-parent="#menu">
+          <li class="w-100">
+            <a href="#" class="nav-link px-0"> <span class="d-none d-sm-inline">Item</span> 1</a>
+          </li>
+          <li>
+            <a href="#" class="nav-link px-0"> <span class="d-none d-sm-inline">Item</span> 2</a>
+          </li>
+        </ul>
+      </li>
+      <li>
+        <a href="#submenu3" data-bs-toggle="collapse" class="nav-link px-0 align-middle">
+          <i class="fs-4 bi-grid"></i> <span class="ms-1 d-none d-sm-inline">Products</span> </a>
+        <ul class="collapse nav flex-column ms-1" id="submenu3" data-bs-parent="#menu">
+          <li class="w-100">
+            <a href="#" class="nav-link px-0"> <span class="d-none d-sm-inline">Product</span> 1</a>
+          </li>
+          <li>
+            <a href="#" class="nav-link px-0"> <span class="d-none d-sm-inline">Product</span> 2</a>
+          </li>
+          <li>
+            <a href="#" class="nav-link px-0"> <span class="d-none d-sm-inline">Product</span> 3</a>
+          </li>
+          <li>
+            <a href="#" class="nav-link px-0"> <span class="d-none d-sm-inline">Product</span> 4</a>
+          </li>
+        </ul>
+      </li>
+      <li>
+        <a href="#" class="nav-link px-0 align-middle">
+          <i class="fs-4 bi-people"></i> <span class="ms-1 d-none d-sm-inline">Customers</span> </a>
+      </li>
+    </ul>
+    <hr>
+    <div class="dropdown pb-4">
+      <a href="#" class="d-flex align-items-center text-white text-decoration-none dropdown-toggle" id="dropdownUser1" data-bs-toggle="dropdown" aria-expanded="false">
+        <img src="https://external-content.duckduckgo.com/iu/?u=https%3A%2F%2Fimages8.alphacoders.com%2F733%2F733943.png&f=1&nofb=1&ipt=0a2a0d5daa09d896785e4c3f2ac388e3bc55ccfdc37f1fcd10a8bee86e4aab1a&ipo=images" alt="hugenerd" width="80" height="50" class="rounded-circle">
+        <span class="d-none d-sm-inline mx-1">Admin</span>
+      </a>
+      <ul class="dropdown-menu dropdown-menu-dark text-small shadow">
+        <li><a class="dropdown-item" href="#">New project...</a></li>
+        <li><a class="dropdown-item" href="#">Settings</a></li>
+        <li><a class="dropdown-item" href="#">Profile</a></li>
+        <li>
+          <hr class="dropdown-divider">
         </li>
+        <li><a class="dropdown-item" href="#">Sign out</a></li>
       </ul>
-
-      <ul class="navbar-nav text-white d-flex ms-auto mx-3">
-<!--          <li class="nav-item ms-2 mt-auto">-->
-            <%#= link_to "Log Out", class: "nav-link border border-light border-3 rounded", data: { turbo_method: :delete } %>
-<!--          </li>-->
-
-        <li class="nav-item ms-2 mt-auto">
-          <%= link_to "Sign Up", class: "nav-link border border-light border-3 rounded" %>
-        </li>
-        <li class="nav-item ms-2 mt-auto">
-          <%= link_to "Log In", class: "nav-link border border-light border-3 rounded" %>
-        </li>
-      </ul>
-
 
     </div>
   </div>
-</nav>
+
