--- a/backend/app/views/pages/home.html.erb
+++ b/backend/app/views/pages/home.html.erb
@@ -18,6 +18,6 @@
   <ul>
     <li><%= link_to "Books example", books_path %></li>
     <li><%= link_to "API V1 Books", api_v1_books_path %></li>
-    <li><%= link_to "API V1 Android Books", api_v1_android_books_path %></li>
+<!--    <li><%#= link_to "API V1 Android Books", api_v1_android_books_path %></li>-->
   </ul>
 </div>
